erDiagram
    LEDGER_ENTRY {
        uuid entry_id PK
        uuid event_id UK
        varchar(20) aggregate_type
        uuid aggregate_id
        uuid account_id
        uuid authorisation_id
        varchar(50) event_type
        varchar(20) entry_status
        decimal(19_2) amount
        varchar(3) currency_code
        varchar(128) merchant_reference
        varchar(30) idempotency_key
        timestamptz occurred_at
        timestamptz created_at
        jsonb payload
    }

    LEDGER_EVENT_LOG {
        uuid event_id PK
        varchar(20) aggregate_type
        uuid aggregate_id
        varchar(30) event_type
        jsonb payload
        uuid correlation_id
        timestamptz occurred_at
        timestamptz received_at
    }

    PROCESSED_EVENT {
        uuid event_id PK
        varchar(30) event_type
        timestamptz processed_at
    }

    PROCESSED_EVENT ||--|| LEDGER_EVENT_LOG: dedup_by_event_id
    LEDGER_EVENT_LOG ||--|| LEDGER_ENTRY: sourced_from_event

